5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4075/executions/1643_2447.log
== TEST (2019-04-15 16:59:05) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia pagamento:" ))
if (preco>pagamento):
	mensagem= falta x
else:
	mensagem= troco de y

print(round(mensagem,2))


-- ERROR:
File "XXXX", line 4
    mensagem= falta x
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:02:23) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia pagamento:" ))
if (preco>pagamento):
	x= preco-pagamento
else:
	y= preco-pagamento
print(round(y,2))
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(y,2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:02:31) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia pagamento:" ))
if (preco>pagamento):
	x= preco-pagamento
else:
	y= preco-pagamento
print(round(y,2))
	



-- EXECUTION TIME:
0.212237
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 7, in <module>
    print(round(y,2))
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:02:45) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia pagamento:" ))
if (preco>pagamento):
	x= preco-pagamento
else:
	y= preco-pagamento
print(round("y,2"))
	



-- EXECUTION TIME:
0.161525
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 7, in <module>
    print(round("y,2"))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:02:47) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia pagamento:" ))
if (preco>pagamento):
	x= preco-pagamento
else:
	y= preco-pagamento
print(round("y,2"))
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round("y,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:03:05) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia pagamento:" ))
if (preco>pagamento):
	x= preco-pagamento
else:
	y= preco-pagamento
print(round(y,2))
	



-- EXECUTION TIME:
0.20398
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 7, in <module>
    print(round(y,2))
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:03:27) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia pagamento:" ))
if (preco>pagamento):
	y= preco-pagamento
else:
	y= preco-pagamento
print(round(y,2))
	



-- EXECUTION TIME:
0.216727
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
-28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:05:24) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia pagamento:" ))
if (preco>pagamento):
	x= preco-pagamento
	xa=(round(x,2))
else:
	y= preco-pagamento
	ya=(round(y,2))
print(round(y,2))
	



-- EXECUTION TIME:
0.170051
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 9, in <module>
    print(round(y,2))
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:05:26) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia pagamento:" ))
if (preco>pagamento):
	x= preco-pagamento
	xa=(round(x,2))
else:
	y= preco-pagamento
	ya=(round(y,2))
print(round(y,2))
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(y,2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:05:38) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia o pagamento:" ))
if (preco>pagamento):
	x= preco-pagamento
	xa=(round(x,2))
else:
	y= preco-pagamento
	ya=(round(y,2))
print(round(y,2))
	



-- EXECUTION TIME:
0.167451
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2447/main.py", line 9, in <module>
    print(round(y,2))
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:07:02) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia o pagamento:" ))
if (preco>pagamento):
	x= preco-pagamento
	xa=(round(x,2))
	print("falta xa")
else:
	y= preco-pagamento
	ya=(round(y,2))
	print("troco ya")
	



-- EXECUTION TIME:
0.225445
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta xa
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco ya
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco ya
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:07:28) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia o pagamento:" ))
if (preco>pagamento):
	x= preco-pagamento
	x1=(round(x,2))
	print("falta, x1")
else:
	y= preco-pagamento
	y1=(round(y,2))
	print("troco, y1")
	



-- EXECUTION TIME:
0.139225
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta, x1
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco, y1
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco, y1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:08:19) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia o pagamento:" ))
if (preco>pagamento):
	x= preco-pagamento
	x1=round(x,2)
	print("falta", x1)
else:
	y= preco-pagamento
	y1=round(y,2)
	print("troco de", y1)
	



-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:08:28) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia o pagamento:" ))
if (preco>pagamento):
	x= preco-pagamento
	x1=round(x,2)
	print("falta", x1)
else:
	y= preco-pagamento
	y1=round(y,2)
	print("troco de", y1)
	



-- EXECUTION TIME:
0.204143
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de -28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:08:33) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia o pagamento:" ))
if (preco>pagamento):
	x= preco-pagamento
	x1=round(x,2)
	print("falta", x1)
else:
	y= preco-pagamento
	y1=round(y,2)
	print("troco de", y1)
	



-- EXECUTION TIME:
0.208845
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de -28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:09:54) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia o pagamento:" ))
if (preco>pagamento):
	x= preco-pagamento
	x1=round(x,2)
	print("Falta", x1)
else:
	y= pagamento-preco
	y1=round(y,2)
	print("Troco de", y1)
	



-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:10:03) 
-- CODE:
preco= float(input("leia o preco:" ))
pagamento= float(input("leia o pagamento:" ))
if (preco>pagamento):
	x= preco-pagamento
	x1=round(x,2)
	print("Falta", x1)
else:
	y= pagamento-preco
	y1=round(y,2)
	print("Troco de", y1)
	



-- EXECUTION TIME:
0.195586
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
